@@ -66,6 +66,7 @@ int checkbanned(char *login, char *host);
 int command_say(object *op, char *params);
 int command_shout(object *op, char *params);
 int command_tell(object *op, char *params);
+int command_reply(object *op, char *params);
 int command_nod(object *op, char *params);
 int command_dance(object *op, char *params);
 int command_kiss(object *op, char *params);
@@ -239,6 +240,7 @@ int command_shutdown(object *op, char *params);
 int command_goto(object *op, char *params);
 int command_generate(object *op, char *params);
 int command_summon(object *op, char *params);
+int command_teleport(object *op, char *params);
 int command_create(object *op, char *params);
 int command_inventory(object *op, char *params);
 int command_skills(object *op, char *params);
